# ours-os

./: .clang-format  .clang-uml  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  convert.py  deasm.S  deasm.as  logfile.txt  meson.build  mkimg.py  ours-dev.code-workspace  ours-dev.srctrldb  ours-dev.srctrlprj  prelaunch.sh  runvm.sh  symbol.txt
ours/kernel/: CMakeLists.txt  README.md  main.ld
ours/kernel/arch/: CMakeLists.txt
ours/kernel/arch/include/ours/arch/: cpu.hpp
ours/kernel/arch/x86/: CMakeLists.txt  descriptor.cpp  early_console.cpp  init.cpp  kernel_layout.cpp  link.ld  main.cpp  multiboot2.S  page_table.cpp  start.S  vm_aspace.cpp
ours/kernel/arch/x86/lib/: CMakeLists.txt
ours/kernel/arch/x86/lib/arch/: pic.cpp  (+2 more)
ours/kernel/arch/x86/main/: CMakeLists.txt  bootstrap.cpp  context.S  descriptor.cpp  exception.S  exception_early.S  faults.cpp  feature.cpp  gdt.S  idt.S  idt.cpp  init.cpp  mp.cpp  smp.cpp  start.S  syscall.cpp  thread.cpp  timer.cpp
ours/kernel/arch/x86/mem/: CMakeLists.txt  page_table.cpp  vm_aspace.cpp
ours/kernel/arch/x86/phys/: CMakeLists.txt  aspace.cpp  gdt.S  kernel-boot.cpp  legacy-boot.cpp  legacy-boot.hpp  legacy-multiboot-start.S  legacy-multiboot.cpp  memory.cpp  multiboot2.hpp  numa.cpp  serial_console.cpp  start32.S  start64.S  topology.cpp  vga_console.cpp
ours/kernel/core/: CMakeLists.txt  cpu_local.cpp  start.cpp
ours/kernel/core/mem/: CMakeLists.txt  cpu_local.cpp  init.cpp  mod.cpp  new.cpp  pm_frame.cpp  pm_node.cpp  pm_zone.cpp  sparse_model.cpp  vm_area.cpp  vm_aspace.cpp  vm_object.cpp  vm_root_area.cpp
ours/kernel/core/sched/: CMakeLists.txt  cpu_local.cpp  eevdf.cpp  main_scheduler.hpp  meson.build  mod.cpp
ours/kernel/core/task/: CMakeLists.txt  thread.cpp
ours/kernel/include/ours/: asm.hpp  assert.hpp  config.hpp  cpu.hpp  cpu_cfg.hpp  cpu_local.hpp  cpu_mask.hpp  early.hpp  init.hpp  kernel_entry.hpp  macro_abi.hpp  marco_abi.hpp  panic.hpp  start.hpp
ours/kernel/include/ours/config/: auxiliary_identifiers.hpp  compiler_types.hpp  if_cfg.hpp  lang_items.hpp
ours/kernel/lib/: CMakeLists.txt
ours/kernel/lib/acpi/: CMakeLists.txt  README.md  apic.cpp  numa.cpp  parser.cpp
ours/kernel/lib/allocator/: CMakeLists.txt  memblock.cpp
ours/kernel/lib/arch/: CMakeLists.txt  README.md
ours/kernel/lib/arch/generic/: CMakeLists.txt  string.cpp
ours/kernel/lib/arch/tests/: CMakeLists.txt  paging-test.cpp
ours/kernel/lib/arch/x86/: CMakeLists.txt  interrupt.S  page_table.cpp
ours/kernel/lib/cnl/: CMakeLists.txt
ours/kernel/lib/command/: CMakeLists.txt
ours/kernel/lib/eftl/: CMakeLists.txt  placeholder.cpp
ours/kernel/lib/gktl/: CMakeLists.txt  command.cpp  cpp_dependencies.cpp  cpu_local.cpp  init_hook.cpp  static_objects.cpp
ours/kernel/lib/heap/: CMakeLists.txt  scope.cpp
ours/kernel/lib/kmrd/: CMakeLists.txt  README.md  damon.cpp
ours/kernel/lib/ktl/: CMakeLists.txt  kmalloc.cpp  new.cpp
ours/kernel/lib/libc/: CMakeLists.txt  boost.cpp  cpp_dependencies.cpp  libcxx.cpp  string.cpp
ours/kernel/lib/lockdep/: CMakeLists.txt
ours/kernel/lib/logz4/: CMakeLists.txt  filter.cpp  init.cpp  log.cpp
ours/kernel/lib/lz4/: CMakeLists.txt  lz4.cpp
ours/kernel/lib/multiboot/: CMakeLists.txt
ours/kernel/lib/omi/: CMakeLists.txt  obi.cpp
ours/kernel/lib/omitl/: CMakeLists.txt  obi-header.cpp  obi-type.cpp  obi-view.cpp
ours/kernel/lib/ustl/: CMakeLists.txt
ours/kernel/main/: CMakeLists.txt  cpu-local-tests.cpp  cpu-local.cpp  cpu-states.cpp  cpu_local.cpp  handoff.cpp  image.ld  ipi-event.cpp  main.elf.ld  main.ld  panic.cpp  start.cpp
ours/kernel/main/arch/: CMakeLists.txt
ours/kernel/main/arch/x86/: CMakeLists.txt  context.S  exception.S  faults.cpp  faults.hpp  gdt.S  image.S  init.cpp  smp.cpp  start.S  thread.cpp  vm_aspace.cpp
ours/kernel/main/include/ours/: cpu-cfg.hpp  cpu-local.hpp  cpu-mask.hpp  cpu-states.hpp  cpu.hpp  cpu_cfg.hpp  cpu_local.hpp  cpu_mask.hpp  init.hpp  ipi-event.hpp  mutex.hpp  start.hpp
ours/kernel/main/irq/: CMakeLists.txt  cpu-local.cpp  cpu_local.cpp  init.cpp  irq_dispatcher.cpp  irq_object.cpp  mod.cpp
ours/kernel/main/mem/: CMakeLists.txt  cpu-local.cpp  cpu_local.cpp  early-mem.cpp  early_mem.cpp  fault.cpp  init_pmm.cpp  init_vmm.cpp  memory_model.cpp  mod.cpp  new.cpp  object-cache.cpp  pm_frame.cpp  pm_node.cpp  pm_zone.cpp  pmm.cpp  scope.cpp  stack.cpp  vm_area.cpp  vm_area_or_mapping.cpp  vm_aspace.cpp  vm_aspace_formatter.cpp  vm_cow_pages.cpp  vm_mapping.cpp  vm_object.cpp  vm_object_paged.cpp  vm_object_physical.cpp  vm_root_area.cpp  vmm.cpp
ours/kernel/main/sched/: CMakeLists.txt  cpu_local.cpp  eevdf.cpp  init.cpp  main_scheduler.cpp  main_scheduler.hpp  mod.cpp  scheduler.cpp
ours/kernel/main/task/: CMakeLists.txt  fair.cpp  init.cpp  mod.cpp  process.cpp  scheduler.cpp  task.ld  thread.cpp  timer-queue.cpp  timer.cpp  wait-queue.cpp
ours/kernel/main/tests/: CMakeLists.txt  tests.ld
ours/kernel/object/: CMakeLists.txt  dispatcher.cpp  kernel_object.cpp  process_dispatcher.cpp  resource_dispatcher.cpp  thread_dispatcher.cpp
ours/kernel/phys/: CMakeLists.txt  acpi.cpp  aspace.cpp  console.cpp  elf-image.cpp  kernel-boot.cpp  kernel-package.cpp  loader.cpp  memory.cpp  panic.cpp  phys-boot.cpp  phys-load.cpp  phys.ld  raw-image.cpp
ours/kernel/phys/arch/: CMakeLists.txt
ours/kernel/phys/arch/x86/: CMakeLists.txt  early_console.cpp  image.S  serial_console.cpp  start32.S  vga_console.cpp  vga_logger.cpp
ours/kernel/phys/core/: CMakeLists.txt  console.cpp  loader.cpp  panic.cpp  print.cpp
ours/kernel/phys/lib/: CMakeLists.txt
ours/kernel/phys/lib/bootmem/: CMakeLists.txt  README.md  bootmem.cpp  memblock.cpp
ours/kernel/phys/tests/: CMakeLists.txt
ours/kernel/platform/: CMakeLists.txt
ours/kernel/platform/pc/: CMakeLists.txt  acpi.cpp  hpet.cpp  init.cpp  interrupt.cpp  keyboard.cpp  memory.cpp  timer.cpp
ours/kernel/tools/: CMakeLists.txt
ours/kernel/tools/mkobi/: CMakeLists.txt  image.S  image.ld
ours/kernel/tools/obit/: CMakeLists.txt  create.cpp  kpkg.cpp  main.cpp  subcmd.hpp
(+771 files in other folders)
